--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,10 +28,18 @@ jobs:
 
       - name: step 1 - build jar
         run: echo build jar...
+        
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      # Runs a single command using the runners shell
-      - name: step 2 - build docker image
-        run: echo build docker...
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: my-docker-hub-namespace/my-docker-hub-repository
         
       # Runs a single command using the runners shell
       - name: step 2 - push docker image
