--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,11 +25,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
-      - name: step 1 - build jar
-        run: echo build jar...
-        
-      - name: Log in to Docker Hub
+  
+      - name: step 1 - Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKER_USER }}
